<resources>
    <string name="app_name">AccountMemo</string>
    <string name="transaction">Transaction</string>
    <string name="statistics">Statistics</string>
    <string name="asset">Asset</string>
    <string name="month">Month</string>
    <string name="assets">Assets</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="total">Total</string>
    <string name="date">Date</string>
    <string name="click_to_select_a_date">Click to Select a Date</string>
    <string name="cash">Cash</string>
    <string name="bankaccount">Bank Account</string>
    <string name="type">Type</string>
    <string name="cost">Cost</string>
    <string name="note">Note</string>
    <string name="save">save</string>
    <string name="credit_card">Credit Card</string>
    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>
    <string name="liabilities">Liabilities</string>
    <string name="bank_account">Bank Account</string>
    <string name="Cost_cant_be_Empty">"Cost can't be Empty"</string>
    <string name="Type_cant_be_Empty">Type can\'t be Empty</string>
    <string name="Choose_one_kind_of_Asset">Choose one kind of Asset</string>
    <string name="Choose_a_Date">Choose a Date</string>
    <string name="Choose_Income_or_Expenses">Choose Income or Expenses</string>
    <string name="Delete">Delete</string>
    <string name="DELETE">DELETE</string>
    <string name="Are_you_sure_to_Delete">Are you sure to Delete ?</string>
    <string name="Cancel">Cancel</string>
    <string name="year_and_month">Year and Month</string>
    <string name="sure">Sure</string>
</resources>