<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTransition"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_addIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/income"
            android:background="@drawable/button"
            app:backgroundTint="@null"
            android:shadowColor="@color/white"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_addExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/expenses"
            android:background="@drawable/button"
            android:shadowColor="@color/white"
            app:backgroundTint="@null"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAlignment="textStart"
            android:layout_weight="5"
            android:layout_marginStart="10dp"
            android:textSize="23sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/txv_addTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/click_to_select_a_date"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asset"
            android:layout_marginStart="10dp"
            android:textSize="23sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_addCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/cash"
            android:textSize="10sp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button"
            android:shadowColor="@color/white"
            app:backgroundTint="@null"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_addAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/bankaccount"
            android:textSize="10sp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button"
            android:shadowColor="@color/white"
            app:backgroundTint="@null"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_addCreditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/credit_card"
            android:textSize="10sp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button"
            android:shadowColor="@color/white"
            app:backgroundTint="@null"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/type"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="5"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/edt_addType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:background="@drawable/edittext"
            android:padding="3dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/cost"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="5"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/edt_addCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:background="@drawable/edittext"
            android:padding="3dp"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/note"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="5"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/edt_addNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:background="@drawable/edittext"
            android:padding="3dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_addSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="end"
        android:background="@drawable/button2"
        android:shadowColor="@color/white"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:text="@string/save"/>


</LinearLayout>