<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape_bg"
    android:layout_margin="10dp"
    android:padding="0dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_and_month"
        android:textSize="20sp"
        android:textColor="#666666"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />
    <com.example.accountmemo.MonthPicker
        android:id="@+id/month_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="#C2C2C2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_left"
            android:layout_width="0dp"
            android:layout_height="40dp"
            style="android:attr/buttonBarButtonStyle"
            android:text="@string/Cancel"
            android:textSize="18sp"
            android:background="@android:color/transparent"
            android:textColor="#006600"
            android:layout_weight="1"
            />

        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:background="#C2C2C2"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_right"
            android:layout_width="0dp"
            android:layout_height="40dp"
            style="android:attr/buttonBarButtonStyle"
            android:text="@string/sure"
            android:background="@android:color/transparent"
            android:textColor="#006600"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>