<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assets"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liabilities"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/txv_asset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assets"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txv_liabilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liabilities"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/txv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/Ci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expenses"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/Ce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/cardview_2"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/txv_CT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_account"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/Bi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expenses"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/Be"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/cardview_2"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_account"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/txv_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_card"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/Di"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expenses"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/De"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/cardview_2"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_card"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/txv_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>