<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/cardview"
        android:layout_marginBottom="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/item_No."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="1"
            android:textAlignment="gravity"
            android:gravity="bottom"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/item_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="2023/12/31"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:textColor="@color/time"/>
        <TextView
            android:id="@+id/item_asset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/asset"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:textColor="@color/time"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:src="@drawable/ic_money"
            android:layout_gravity="bottom" />
        <TextView
            android:id="@+id/item_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="1000"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:textColor="@color/time"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/item_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:layout_weight="4"
                android:layout_gravity="bottom"/>
            <TextView
                android:id="@+id/item_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/time"
                android:textAlignment="textStart"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                android:textSize="15sp"
                android:layout_weight="3" />
            <TextView
                android:id="@+id/item_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textColor="@color/time"
                android:textAlignment="textStart"
                android:padding="5dp"
                android:layout_marginEnd="25dp"
                android:textSize="15sp"
                android:layout_weight="3"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>